fixed alignment of contents again

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    min-height: 80px;
+    background-color: rgb(140, 190, 190);
 }
 .container{
     display: flex;
